--- a/Dockerfile.chatbot
+++ b/Dockerfile.chatbot
@@ -1,12 +1,13 @@
-FROM python:3.10-slim
+FROM jenkins/jenkins:lts-jdk17
 
-WORKDIR /app
+USER root
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Install docker CLI
+RUN apt-get update && \
+    apt-get install -y docker.io && \
+    apt-get clean
 
-COPY . .
+# Allow jenkins user to access docker
+RUN usermod -aG docker jenkins
 
-EXPOSE 5000
-
-CMD ["python", "app.py"]
+USER jenkins
