--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -1,11 +1,13 @@
-FROM jenkins/jenkins:lts-jdk17
+FROM python:3.10-slim
 
-USER root
+WORKDIR /app
 
-RUN apt-get update && \
-    apt-get install -y docker.io && \
-    rm -rf /var/lib/apt/lists/*
+COPY requirements.txt .
 
-RUN usermod -aG docker jenkins
+RUN pip install --no-cache-dir -r requirements.txt
 
-USER jenkins
+COPY . .
+
+EXPOSE 5000
+
+CMD ["python", "app.py"]
